<resources>
    <string name="app_name">Carfix</string>
    <string name="usrpass">Password</string>
    <string name="usremail">Email Address</string>
    <string name="usrphone">Phone Number</string>
    <string name="usrconfirmpass">Confirm Password</string>
    <string name="usrcompanyname">Company Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="company_name">Company Name</string>
    <string name="company_phone">Phone Number</string>
    <string name="title_towing">Towing Services</string>
    <string name="title_gas">Gas Stations</string>
    <string name="title_hospital">Hospitals</string>
    <string name="title_police">Police Stations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="distance">Distance</string>
</resources>
