<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mwenda.carfix.ui.home.HomeFragment"
        android:label="@string/title_towing"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hospital"
        android:name="com.mwenda.carfix.ui.hospitals.HospitalsFragment"
        android:label="@string/title_hospital"
        tools:layout="@layout/fragment_hospitals" />

    <fragment
        android:id="@+id/navigation_policestations"
        android:name="com.mwenda.carfix.ui.police.PoliceStationsFragment"
        android:label="@string/title_police"
        tools:layout="@layout/fragment_police" />
    <fragment
        android:id="@+id/navigation_gasstations"
        android:name="com.mwenda.carfix.ui.gas.GasStationsFragment"
        android:label="@string/title_gas"
        tools:layout="@layout/fragment_gas" />


</navigation>
